fix horizontal scroll

--- a/src/css/aboutme.css
+++ b/src/css/aboutme.css
@@ -55,7 +55,18 @@
 }
 
 .sectiontest {
-  height: 100vh;
-  width: 100vw;
+  height: 1000vh;
+  width: 1000vw;
   background-color: rgb(163, 73, 73);
+}
+
+/** TIMELINE */
+
+.line {
+    position: absolute;
+    top: 45%;
+    left: 10%;
+    height: 10px;
+    width: 150vw;
+    background-color: #fff;
 }
